// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`introspectTable (postgres) > snapshot of articles 1`] = `
{
  "fields": [
    {
      "dbName": "id",
      "hasDefault": true,
      "isAutoIncrement": true,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": true,
      "isLongText": false,
      "isPrimaryKey": true,
      "key": "id",
      "kind": "number",
      "notNull": true,
      "valueCheck": "int32",
    },
    {
      "dbName": "title",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": true,
      "isPrimaryKey": false,
      "key": "title",
      "kind": "string",
      "notNull": true,
    },
    {
      "dbName": "body",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": true,
      "isPrimaryKey": false,
      "key": "body",
      "kind": "string",
      "notNull": false,
    },
    {
      "dbName": "author_id",
      "foreignKey": {
        "column": "id",
        "table": "authors",
      },
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": true,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "authorId",
      "kind": "number",
      "notNull": true,
      "valueCheck": "int32",
    },
    {
      "dbName": "published_at",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "publishedAt",
      "kind": "date",
      "notNull": false,
    },
    {
      "dbName": "meta",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "meta",
      "kind": "json",
      "notNull": false,
    },
    {
      "dbName": "views",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": true,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "views",
      "kind": "number",
      "notNull": false,
      "valueCheck": "int32",
    },
    {
      "dbName": "score",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "score",
      "kind": "number",
      "notNull": false,
    },
    {
      "dbName": "big",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "big",
      "kind": "bigint",
      "notNull": false,
      "valueCheck": "int64",
    },
  ],
  "pk": {
    "dbName": "id",
    "hasDefault": true,
    "isAutoIncrement": true,
    "isDateOnly": false,
    "isGenerated": false,
    "isInteger": true,
    "isLongText": false,
    "isPrimaryKey": true,
    "key": "id",
    "kind": "number",
    "notNull": true,
    "valueCheck": "int32",
  },
  "table": "articles",
  "tableName": "articles",
}
`;

exports[`introspectTable (postgres) > snapshot of authors 1`] = `
{
  "fields": [
    {
      "dbName": "id",
      "hasDefault": true,
      "isAutoIncrement": true,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": true,
      "isLongText": false,
      "isPrimaryKey": true,
      "key": "id",
      "kind": "number",
      "notNull": true,
      "valueCheck": "int32",
    },
    {
      "dbName": "name",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": true,
      "isPrimaryKey": false,
      "key": "name",
      "kind": "string",
      "notNull": true,
    },
    {
      "dbName": "email",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": true,
      "isPrimaryKey": false,
      "key": "email",
      "kind": "string",
      "notNull": false,
    },
    {
      "dbName": "active",
      "hasDefault": true,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "active",
      "kind": "boolean",
      "notNull": true,
    },
    {
      "dbName": "role",
      "enumValues": [
        "admin",
        "editor",
        "viewer",
      ],
      "hasDefault": true,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "role",
      "kind": "enum",
      "notNull": true,
    },
    {
      "dbName": "created_at",
      "hasDefault": true,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "createdAt",
      "kind": "date",
      "notNull": true,
    },
  ],
  "pk": {
    "dbName": "id",
    "hasDefault": true,
    "isAutoIncrement": true,
    "isDateOnly": false,
    "isGenerated": false,
    "isInteger": true,
    "isLongText": false,
    "isPrimaryKey": true,
    "key": "id",
    "kind": "number",
    "notNull": true,
    "valueCheck": "int32",
  },
  "table": "authors",
  "tableName": "authors",
}
`;

exports[`introspectTable (postgres) > snapshot of events 1`] = `
{
  "fields": [
    {
      "dbName": "id",
      "hasDefault": true,
      "isAutoIncrement": true,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": true,
      "isLongText": false,
      "isPrimaryKey": true,
      "key": "id",
      "kind": "number",
      "notNull": true,
      "valueCheck": "int32",
    },
    {
      "dbName": "day",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": true,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "day",
      "kind": "date",
      "notNull": true,
    },
    {
      "dbName": "code",
      "hasDefault": true,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "code",
      "kind": "string",
      "notNull": true,
      "valueCheck": "uuid",
    },
    {
      "dbName": "amount",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "amount",
      "kind": "string",
      "notNull": false,
    },
    {
      "dbName": "mood",
      "enumValues": [
        "calm",
        "busy",
      ],
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "mood",
      "kind": "enum",
      "notNull": false,
    },
    {
      "dbName": "note",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": true,
      "isPrimaryKey": false,
      "key": "note",
      "kind": "string",
      "notNull": false,
    },
    {
      "dbName": "due",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": true,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "due",
      "kind": "string",
      "notNull": false,
    },
  ],
  "pk": {
    "dbName": "id",
    "hasDefault": true,
    "isAutoIncrement": true,
    "isDateOnly": false,
    "isGenerated": false,
    "isInteger": true,
    "isLongText": false,
    "isPrimaryKey": true,
    "key": "id",
    "kind": "number",
    "notNull": true,
    "valueCheck": "int32",
  },
  "table": "events",
  "tableName": "events",
}
`;

exports[`introspectTable (postgres) > snapshot of kv 1`] = `
{
  "fields": [
    {
      "dbName": "key",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": true,
      "isPrimaryKey": true,
      "key": "key",
      "kind": "string",
      "notNull": true,
    },
    {
      "dbName": "value",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": true,
      "isPrimaryKey": false,
      "key": "value",
      "kind": "string",
      "notNull": false,
    },
  ],
  "pk": {
    "dbName": "key",
    "hasDefault": false,
    "isAutoIncrement": false,
    "isDateOnly": false,
    "isGenerated": false,
    "isInteger": false,
    "isLongText": true,
    "isPrimaryKey": true,
    "key": "key",
    "kind": "string",
    "notNull": true,
  },
  "table": "kv",
  "tableName": "kv",
}
`;

exports[`introspectTable (postgres) > snapshot of tags 1`] = `
{
  "fields": [
    {
      "dbName": "id",
      "hasDefault": true,
      "isAutoIncrement": true,
      "isDateOnly": false,
      "isGenerated": true,
      "isInteger": true,
      "isLongText": false,
      "isPrimaryKey": true,
      "key": "id",
      "kind": "number",
      "notNull": true,
      "valueCheck": "int32",
    },
    {
      "dbName": "label",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": false,
      "isPrimaryKey": false,
      "key": "label",
      "kind": "string",
      "notNull": true,
    },
    {
      "dbName": "description",
      "hasDefault": false,
      "isAutoIncrement": false,
      "isDateOnly": false,
      "isGenerated": false,
      "isInteger": false,
      "isLongText": true,
      "isPrimaryKey": false,
      "key": "description",
      "kind": "string",
      "notNull": false,
    },
  ],
  "pk": {
    "dbName": "id",
    "hasDefault": true,
    "isAutoIncrement": true,
    "isDateOnly": false,
    "isGenerated": true,
    "isInteger": true,
    "isLongText": false,
    "isPrimaryKey": true,
    "key": "id",
    "kind": "number",
    "notNull": true,
    "valueCheck": "int32",
  },
  "table": "tags",
  "tableName": "tags",
}
`;
